--- a/app/globals.css
+++ b/app/globals.css
@@ -59,7 +59,7 @@
   --color-muted: #1e293b;
   --color-muted-foreground: #94a3b8;
 
-  --color-accent: #10b981; /** todo: make blue */
+  --color-accent: #3b82f6;
   --color-accent-foreground: #ffffff;
 
   --color-destructive: #ef4444;
